--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
   "name": "ipc-connection",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Electron IPC event bus with type-safe client and ack/request-response support",
+  "main": "dist/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "start": "npm run build && electron ."
   },
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "electron": "^39.2.7",
     "uuid": "^13.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^22.8.6",
+    "typescript": "^5.6.3"
   }
 }
