--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "dist/main.js",
   "scripts": {
     "build": "tsc",
-    "start": "npm run build && electron ."
+    "build:umd": "rollup -c",
+    "build:all": "npm run build && npm run build:umd",
+    "start": "npm run build:all && electron ."
   },
   "author": "",
   "license": "ISC",
@@ -14,7 +16,12 @@
     "uuid": "^13.0.0"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^25.0.8",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-typescript": "^11.1.6",
     "@types/node": "^22.8.6",
+    "rollup": "^4.24.0",
+    "tslib": "^2.8.1",
     "typescript": "^5.6.3"
   }
 }
